[gd_scene load_steps=3 format=3 uid="uid://c40pmpsg5yibb"]

[ext_resource type="Script" path="res://scripts/gui/side_panel.gd" id="1_6sitm"]
[ext_resource type="Theme" uid="uid://ci630ouldc1rt" path="res://assets/themes/side_panel.tres" id="1_xth37"]

[node name="side_panel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -475.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6sitm")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 25.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_xth37")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="name" type="RichTextLabel" parent="Panel/VBoxContainer"]
layout_mode = 2
bbcode_enabled = true
text = "[center][b]TF2QP[/b][/center]"
fit_content = true

[node name="play" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Play
"

[node name="config" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Config
"

[node name="settings" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Settings
"

[node name="HSeparator2" type="HSeparator" parent="Panel/VBoxContainer"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 350)
layout_mode = 2

[node name="about" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "About
"

[connection signal="pressed" from="Panel/VBoxContainer/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/config" to="." method="_on_config_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/about" to="." method="_on_about_pressed"]
